2002-08-14  Cristy  <cristy@mystic.es.dupont.com>
  * Added 16-bit raw write support to PPM.

2002-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Re-implemented ReadTTFImage() using the draw.h APIs.

2002-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Fixed a libtool bug in order to allow passing -m64 to allow building
    64-bit ImageMagick using gcc 3.1 or later under SPARC Solaris.

2002-08-04  Cristy  <cristy@mystic.es.dupont.com>
  * Added experimental 32-bit QuantumDepth pixel support.
  * Stream support was not thread-safe (bug report by William Radcliffe).
  * Push/PopImagePixels() now recognizes the proper buffer length
	  (previously it operated on one scanline at a time).
  * Deprecated Down/Upscale defines.  Replaced them with Scale*ToQuantum()
    and ScaleQuantumTo*() methods.
    
2002-08-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Changed configure argument --disable-16bit-pixel to
    --with-quantum-depth in order to make its usage more
    straightforward and generic.  Build ImageMagick using
    an eight-bit quantum via --with-quantum-depth=8.
  * Magick++ library builds as a DLL under Windows now.

2002-07-31  Cristy  <cristy@mystic.es.dupont.com>
  * Delegates/modules are restricted to hard-coded search paths (a
    security feature suggested by Bob Friesenhahn).

2002-07-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added SubstituteString to utility.c for performing substitions
    on strings.
  * Added support for performing Ghostscript-related substitutions while
    reading delegates.mgk and type.mgk files.

2002-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added the Windows utility functions NTGhostscriptDLL(),
    NTGhostscriptEXE(), and NTGhostscriptFonts(), to find the DLL,
    executable, and font directory corresponding to the newest Ghostscript
    install on the system.

2002-07-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Split nt.c into ntbase.c and ntfeature.c