@@ -1,3 +1,8 @@
+2002-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * Render Postscript via Ghostscript DLL (gsdll32.dll) under
+    Windows if it can be loaded.  Only ps.c currently uses
+    this to verify there are no problems.
+
 2002-08-14  Cristy  <cristy@mystic.es.dupont.com>
   * Added 16-bit raw write support to PPM.
 
